--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,12 @@ canvas {
   width: 100%;
   height: 100%;
 }
+
+canvas-test {
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
