--- a/src/styles.css
+++ b/src/styles.css
@@ -5,10 +5,22 @@
 
 
 
-canvas {
+canvas-old {
   position: absolute;
   width: 100%;
   height: 100%;
+}
+
+canvas {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 100vw;
+  max-height: 100vh;
+  width: auto;
+  height: auto;
+  object-fit: contain;
 }
 
 canvas-half {
