--- a/src/styles.css
+++ b/src/styles.css
@@ -3,21 +3,63 @@
   padding: 0;
 }
 
-
-
-canvas-old {
-  position: absolute;
+html, body {
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  background-color: black;
 }
 
 canvas {
+  background-color: yellow;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 100vw;
   max-height: 100vh;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+}
+.crosshair-h, .crosshair-v {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: black;
+}
+.crosshair-h {
+  width: 100%;
+  height: 1px;
+}
+.crosshair-v {
+  width: 1px;
+  height: 100%;
+}
+
+canvas-do-not-scale {
+  background-color: yellow;
+  position: absolute;
+
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+canvas-scale-maintain-ar {
+  background-color: yellow;
+  position: absolute;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  max-width: 100vw;
+  max-height: 100vh;
+
   width: auto;
   height: auto;
   object-fit: contain;
@@ -32,8 +74,25 @@ canvas-half {
   transform: translate(-50%, -50%);
 }
 
-canvas-fixed {
+#debug {
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  z-index: 1000;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  font-family: monospace;
+  font-size: 12px;
+  max-width: 300px;
+  word-wrap: break-word;
+}
+
+
+
+canvas-old {
   position: absolute;
-  width: 1280px;
-  height: 720px;
+  width: 100%;
+  height: 100%;
 }
